force-app/main/default/objects/TechClarification__c/TechClarification__c.object-meta.xml
<CustomObject>
    <label>Tech Clarification</label>
    <nameField>
        <label>Tech Clarification Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tech Clarifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>