force-app/main/default/objects/TechClarification__c/fields/FocalPoint__c.field-meta.xml
<CustomField>
    <fullName>FocalPoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Focal Point</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TechReviews</relationshipName>
    <type>Lookup</type>
</CustomField>