force-app/main/default/objects/TechClarification__c/fields/NamOwner__c.field-meta.xml
<CustomField>
    <fullName>NamOwner__c</fullName>
    <formula>NAM__r.Owner:User.FirstName + &apos; &apos; + NAM__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nam Owner</label>
    <type>Text</type>
</CustomField>