force-app/main/default/objects/TechClarification__c/fields/ReviewStatus__c.field-meta.xml
<CustomField>
    <fullName>ReviewStatus__c</fullName>
    <defaultValue>&apos;Open&apos;</defaultValue>
    <label>Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Closed and waiting RCA</fullName>
                <isActive>false</isActive>
                <label>Closed and waiting RCA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>