force-app/main/default/objects/TechClarification__c/validationRules/OnlyFocalPointcanChangeStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyFocalPointcanChangeStatus</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISCHANGED( ReviewStatus__c ),
  $User.Id &lt;&gt;  FocalPoint__r.Id 
)</errorConditionFormula>
    <errorMessage>Only the person assigned as the &quot;Focal Point&quot; can change the &quot;Review Status&quot;</errorMessage>
</ValidationRule>